<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notepad</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_write_note">WriteNote</string>
    <string name="search">Search</string>
    <string name="Save">Save</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_note">Enter Note</string>
    <string name="search_notes">search Note</string>
    <string name="paint">Paint</string>
    <string name="pen">Draw</string>
    <string name="erase">Erase</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="done">Done</string>
    <string name="colours">Colors</string>
    <string name="size">Size</string>
</resources>
