<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pooja.notepad.activity.WriteNoteActivity"
   >

    <ImageView
        android:id="@+id/imgBrush"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_brush_black_24dp"
        android:layout_margin="5dp"
        android:onClick="onBrush"/>

    <ImageView
        android:id="@+id/imgTick"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_check_box_black_24dp"
        android:layout_margin="5dp"
        android:layout_toRightOf="@id/imgBrush"/>

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_image_black_24dp"
        android:layout_margin="5dp"
        android:layout_toRightOf="@id/imgTick"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/btnSave"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:text="@string/Save"
        android:layout_margin="5dp"
        android:textSize="15dp"
        android:background="@color/White"
        android:layout_gravity="right"
        android:onClick="onClickSave"
        tools:ignore="OnClick" />
    <EditText
        android:id="@+id/edtAddTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/enter_title"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/edtAddNote"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/enter_note"
        android:textSize="15sp"
        />
</LinearLayout>
</RelativeLayout>

