<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:text="@string/done"
            android:layout_alignParentEnd="true" />
        <Button
            android:id="@+id/redo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/done"
            android:background="@android:color/transparent"
            android:text="@string/redo"
            android:layout_toStartOf="@+id/done" />
        <Button
            android:id="@+id/undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/redo"
            android:background="@android:color/transparent"
            android:text="@string/undo"
            android:layout_toStartOf="@+id/redo" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/draw"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/pen"
                    android:src="@drawable/ic_pen"
                    android:onClick="onDrawClick"/>
                <ImageView
                    android:id="@+id/erase"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/erase"
                    android:src="@drawable/ic_eraser" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp">
            <LinearLayout
                android:id="@+id/colorPalette"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="10dp">
                <TextView
                    android:id="@+id/colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/colours"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#000000"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#000000" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFF6600"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FFFF6600" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFFCC00"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FFFFCC00" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF009900"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF009900" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF0000FF"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF0000FF" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF990099"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF990099" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFF6666"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FFFF6666" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF787878"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:src="@drawable/paint"
                        android:tag="#FF787878" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/size"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                            <RadioButton
                                android:id="@+id/extra_small_brush"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="@android:color/black"
                                android:checked="true"
                                android:scaleX="0.6"
                                android:scaleY="0.6"
                                android:onClick="chooseBrushSize"/>
                            <RadioButton
                                android:id="@+id/medium_brush"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="@android:color/black"
                                android:checked="false"
                                android:scaleX="1"
                                android:scaleY="1"
                                android:onClick="chooseBrushSize"/>
                        </RadioGroup>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:id="@+id/small_brush"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="@android:color/black"
                                android:checked="false"
                                android:scaleX="0.8"
                                android:scaleY="0.8"
                                android:onClick="chooseBrushSize"/>
                            <RadioButton
                                android:id="@+id/large_brush"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="@android:color/black"
                                android:checked="false"
                                android:scaleX="1.3"
                                android:scaleY="1.3"
                                android:onClick="chooseBrushSize"
                                 />
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <view
        class="com.example.pooja.notepad.activity.DrawView"
        android:id="@+id/drawView"
        android:layout_width="match_parent"
        android:layout_height="400dp" />
</LinearLayout>